--- a/netlify.toml
+++ b/netlify.toml
@@ -7,11 +7,11 @@
   to = "/index.html"
   status = 200
 
-[[plugins]]
-  package = "netlify-plugin-cypress"
+# [[plugins]]
+ # package = "netlify-plugin-cypress"
 
-  [plugins.inputs.postBuild]
-    enable = true
+  #[plugins.inputs.postBuild]
+  #  enable = true
 
-  [plugins.inputs]
-    enable = false
+ # [plugins.inputs]
+   # enable = false
